force-app/main/default/objects/OpportunityUpdate__e/OpportunityUpdate__e.object-meta.xml
<CustomObject>
    <label>OpportunityUpdate</label>
    <pluralLabel>OpportunityUpdates</pluralLabel>
</CustomObject>