force-app/main/default/objects/OpportunityUpdate__e/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>OpportunityId</label>
    <length>21</length>
    <type>Text</type>
</CustomField>