force-app/main/default/objects/OpportunityUpdate__e/fields/Payment_Draft_Invalidated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Draft_Invalidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags as true if at least one payment draft was invalidated. This is used in the LWC to fire persistent toast to end user.</description>
    <label>Payment Draft Invalidated</label>
    <type>Checkbox</type>
</CustomField>